--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@
         font-size: 2.5rem;
     }
     & nav{
-        text-align: right;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         font-size: 1.8rem;
         font-weight: 549;
         padding: 0.7rem;
